feat: 시나리오3 테스트